@@ -1,15 +1,16 @@
 package com.bakdata.conquery.sql.conversion.query;
 
+import java.util.Collections;
 import java.util.List;
 
 import com.bakdata.conquery.apiv1.query.ConceptQuery;
 import com.bakdata.conquery.sql.conversion.NodeConverter;
-import com.bakdata.conquery.sql.conversion.context.ConversionContext;
-import com.bakdata.conquery.sql.conversion.context.selects.Selects;
-import com.bakdata.conquery.sql.conversion.context.step.QueryStep;
-import com.bakdata.conquery.sql.conversion.context.step.QueryStepTransformer;
+import com.bakdata.conquery.sql.conversion.cqelement.ConversionContext;
 import com.bakdata.conquery.sql.conversion.dialect.SqlFunctionProvider;
-import com.bakdata.conquery.sql.models.ColumnDateRange;
+import com.bakdata.conquery.sql.conversion.model.ColumnDateRange;
+import com.bakdata.conquery.sql.conversion.model.QueryStep;
+import com.bakdata.conquery.sql.conversion.model.QueryStepTransformer;
+import com.bakdata.conquery.sql.conversion.model.Selects;
 import org.jooq.Field;
 import org.jooq.Record;
 import org.jooq.Select;
@@ -31,16 +32,18 @@ public class ConceptQueryConverter implements NodeConverter<ConceptQuery> {
 	@Override
 	public ConversionContext convert(ConceptQuery node, ConversionContext context) {
 
-		ConversionContext contextAfterConversion = context.getNodeConverterService()
+		ConversionContext contextAfterConversion = context.getNodeConversions()
 														  .convert(node.getRoot(), context);
 
-		QueryStep preFinalStep = contextAfterConversion.getQuerySteps().iterator().next();
+
+		QueryStep previousStep = contextAfterConversion.getQuerySteps().iterator().next();
+		Selects finalSelects = this.toFinalSelects(previousStep, context);
 		QueryStep finalStep = QueryStep.builder()
 									   .cteName(null)  // the final QueryStep won't be converted to a CTE
-									   .selects(this.toFinalSelects(preFinalStep, context))
-									   .fromTable(QueryStep.toTableLike(preFinalStep.getCteName()))
-									   .conditions(preFinalStep.getConditions())
-									   .predecessors(List.of(preFinalStep))
+									   .selects(finalSelects)
+									   .fromTable(QueryStep.toTableLike(previousStep.getCteName()))
+									   .conditions(Collections.emptyList())
+									   .predecessors(List.of(previousStep))
 									   .build();
 
 		Select<Record> finalQuery = this.queryStepTransformer.toSelectQuery(finalStep);
@@ -59,7 +62,7 @@ public class ConceptQueryConverter implements NodeConverter<ConceptQuery> {
 		}
 
 		SqlFunctionProvider functionProvider = context.getSqlDialect().getFunction();
-		Field<Object> finalValidityDateSelect = functionProvider.daterangeString(finalSelects.getValidityDate().get())
+		Field<Object> finalValidityDateSelect = functionProvider.validityDateStringAggregation(finalSelects.getValidityDate().get())
 																.as(FINAL_VALIDITY_DATE_COLUMN_NAME);
 
 		return finalSelects.withValidityDate(ColumnDateRange.of(finalValidityDateSelect));
